Se ha agregado un nuevo contenido

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Titulo cualquier de una pagina cualquiera</h1>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, debitis atque. 
     Itaque nobis pariatur illo voluptatibus voluptates dolore animi asperiores rerum eveniet accusamus magni, sit dolorum ad a. Veniam, ex!</p>
-    <h2> Hola mundo</h2>
+    <span>Hola</span>
 
 </body>
 </html>
